--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <!-- Stylesheets -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:300"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
+    <main class="tv">
+      <h1>Let's see what's on tonight...</h1>
+      <section class="tv-picture-container">
+        <img
+          class="tv-frame"
+          src="https://ga-instruction.s3.amazonaws.com/assets/front-end-web-development/fewd-conditionals-images/tv-container.png"
+        />
+        <div class="tv-show" id="screen">
+          <img
+            src="http://placehold.it/829x470"
+            alt="something good to watch"
+          />
+        </div>
+      </section>
+      <ul class="channels-container">
+        <li class="channel" id="one">1</li>
+        <li class="channel" id="two">2</li>
+        <li class="channel" id="three">3</li>
+        <li class="channel" id="four">4</li>
+        <li class="channel" id="five">5</li>
+        <li class="channel" id="six">6</li>
+        <li class="channel" id="seven">7</li>
+        <li class="channel" id="eight">8</li>
+        <li class="channel" id="nine">9</li>
+      </ul>
+    </main>
     <script src="main.js"></script>
   </body>
 </html>
