--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         />
         <div class="tv-show" id="screen">
           <img
+            id="tv_display_picture"
             src="http://placehold.it/829x470"
             alt="something good to watch"
           />
